2001-06-15  Scott S. Goodwin  <scott@scottg.net>

	* readme.txt: updated.

	* init.c, nsopenssl.c, nsopenssl.h, ssl.c: created
	NsOpenSSLModuleData structure to hold the data about the module
	that is common between client and server functions. Pulled this
	data out of the NsServerSSLDriver and NsClientSSLDriver
	struct. Changed all references like sdPtr->module to be
	sdPtr->module->name.

	* init.c: changed ServerLoadCertificate to look for a certificate
	chain after the server's certificate. Simply append all of the
	certs in the chain to the end of the server cert file. Having a
	chain is optional.

2001-06-13  Scott S. Goodwin  <scott@scottg.net>

	* init.c: added NsClientSSLCreateDriver and NsClientSSLFreeDriver.

	* init.c, nsopenssl.h: moved OpenSSL initialization out of
	NsServerCreateDriver to the new NsInitOpenSSL function.

	* init.c, nsopenssl.c, nsopenssl.h: changed NsOpenSSLCreateDriver
	to NsServerSSLCreateDriver and NsOpenSSLFreeDriver to
	NsServerSSLFreeDriver.

	* nsopenssl.c: added NsClientSSLConnection and NsClientSSLDriver
	structs (I know, the client stuff doesn't need a driver; I'll work
	that issue later.)

	* all: changed NsOpenSSLConnection struct name to
	NsServerSSLConnection and NsOpenSSLDriver to NsServerSSLDriver in
	preparation for adding client structures.

2001-06-12  Scott S. Goodwin  <scott@scottg.net>

	* init.c, nsopenssl.c, nsopenssl.h: prefixed static functions that
	are server-specific with "Server", and replaced "NsOpenSSL" with
	"NsServerSSL" to make room for the upcoming client functions,
	which will be called "NsClientSSL".

	* nsopenssl-client-test.htm: added this file to test connectivity
	for the nsopenssl client code.

	* Makefile: removed old CLIENTVERIFY test preprocessor stuff.

	* all: changed #ifdef AS3 to #ifndef NS_MAJOR_VERSION. This means
	it now compiles for AOLserver 3.x by default, since
	NS_MAJOR_VERSION doesn't even exist in 4.x yet.

	* nsopenssl.h: Added code to define the OpenSSL library in use by