@@ -36,49 +36,84 @@
 #define DEFAULT_PROTOCOL            "https"
 #define DEFAULT_NAME                "nsopenssl"
 
-#define CONFIG_TRACE                "Trace"
-#define DEFAULT_TRACE               NS_FALSE
+#define CONFIG_CLIENT_TRACE                "ClientTrace"
+#define DEFAULT_CLIENT_TRACE               NS_FALSE
 
-#define CONFIG_CIPHERSUITE          "CipherSuite"
-#define DEFAULT_CIPHERSUITE         SSL_DEFAULT_CIPHER_LIST
+#define CONFIG_SERVER_TRACE                "ServerTrace"
+#define DEFAULT_SERVER_TRACE               NS_FALSE
 
-#define	CONFIG_PROTOCOLS            "Protocols"
+#define CONFIG_SERVER_CIPHERSUITE          "ServerCipherSuite"
+#define CONFIG_CLIENT_CIPHERSUITE          "ClientCipherSuite"
+#define DEFAULT_CIPHERSUITE                SSL_DEFAULT_CIPHER_LIST
 
-#define CONFIG_CERTFILE             "CertFile"
-#define DEFAULT_CERTFILE            "certificate.pem"
+#define	CONFIG_SERVER_PROTOCOL             "ServerProtocol"
+#define	CONFIG_CLIENT_PROTOCOL             "ClientProtocol"
 
-#define CONFIG_KEYFILE              "KeyFile"
-#define DEFAULT_KEYFILE             "key.pem"
+#define CONFIG_SERVER_CERTFILE             "ServerCertFile"
+#define DEFAULT_SERVER_CERTFILE            "servercert.pem"
 
-#define CONFIG_CAFILE               "CAFile"
-#define DEFAULT_CAFILE              "ca.pem"
+#define CONFIG_SERVER_KEYFILE              "ServerKeyFile"
+#define DEFAULT_SERVER_KEYFILE             "serverkey.pem"
 
-#define CONFIG_CADIR                "CADir"
-#define DEFAULT_CADIR               "ca"
+#define CONFIG_CLIENT_CERTFILE             "ClientCertFile"
+#define DEFAULT_CLIENT_CERTFILE            "clientcert.pem"
 
-#define CONFIG_SESSIONCACHE         "SessionCache"
-#define DEFAULT_SESSIONCACHE        NS_TRUE
+#define CONFIG_CLIENT_KEYFILE              "ClientKeyFile"
+#define DEFAULT_CLIENT_KEYFILE             "Clientkey.pem"
 
-#define CONFIG_SESSIONCACHESIZE     "SessionCacheSize"
-#define DEFAULT_SESSIONCACHESIZE    128
+#define CONFIG_SERVER_CAFILE               "ServerCAFile"
+#define DEFAULT_SERVER_CAFILE              "serverca.pem"
 
-#define CONFIG_SESSIONTIMEOUT       "SessionTimeout"
-#define DEFAULT_SESSIONTIMEOUT      300
+#define CONFIG_SERVER_CADIR                "ServerCADir"
+#define DEFAULT_SERVER_CADIR               "serverca"
 
-#define CONFIG_SOCKTIMEOUT          "SockTimeout"
-#define DEFAULT_SOCKTIMEOUT         30
+#define CONFIG_CLIENT_CAFILE               "ClientCAFile"
+#define DEFAULT_CLIENT_CAFILE              "clientca.pem"
 
-#define CONFIG_BUFFERSIZE           "BufferSize"
-#define DEFAULT_BUFFERSIZE          16384
+#define CONFIG_CLIENT_CADIR                "ClientCADir"
+#define DEFAULT_CLIENT_CADIR               "clientca"
 
-#define CONFIG_CLIENTVERIFY         "ClientVerify"
-#define DEFAULT_CLIENTVERIFY        NS_FALSE
+#define CONFIG_SERVER_SESSIONCACHE         "ServerSessionCache"
+#define DEFAULT_SERVER_SESSIONCACHE        NS_TRUE
 
-#define CONFIG_RANDOMFILE           "RandomFile"
+#define CONFIG_SERVER_SESSIONCACHESIZE     "ServerSessionCacheSize"
+#define DEFAULT_SERVER_SESSIONCACHESIZE    128
+
+#define CONFIG_SERVER_SESSIONTIMEOUT       "ServerSessionTimeout"
+#define DEFAULT_SERVER_SESSIONTIMEOUT      300
+
+#define CONFIG_CLIENT_SESSIONCACHE         "ClientSessionCache"
+#define DEFAULT_CLIENT_SESSIONCACHE        NS_TRUE
+
+#define CONFIG_CLIENT_SESSIONCACHESIZE     "ClientSessionCacheSize"
+#define DEFAULT_CLIENT_SESSIONCACHESIZE    128
+
+#define CONFIG_CLIENT_SESSIONTIMEOUT       "ClientSessionTimeout"
+#define DEFAULT_CLIENT_SESSIONTIMEOUT      300
+
+#define CONFIG_SERVER_SOCKTIMEOUT          "ServerSockTimeout"
+#define DEFAULT_SERVER_SOCKTIMEOUT         30
+
+#define CONFIG_SERVER_BUFFERSIZE           "ServerBufferSize"
+#define DEFAULT_SERVER_BUFFERSIZE          16384
+
+#define CONFIG_CLIENT_SOCKTIMEOUT          "ClientSockTimeout"
+#define DEFAULT_CLIENT_SOCKTIMEOUT         30
+
+#define CONFIG_CLIENT_BUFFERSIZE           "ClientBufferSize"
+#define DEFAULT_CLIENT_BUFFERSIZE          16384
+
+#define CONFIG_CLIENT_VERIFIES_PEER        "ClientVerifiesPeer"
+#define DEFAULT_CLIENT_VERIFIES_PEER       NS_FALSE
+
+#define CONFIG_SERVER_VERIFIES_PEER        "ServerVerifiesPeer"
+#define DEFAULT_SERVER_VERIFIES_PEER       NS_FALSE
+
+#define CONFIG_RANDOMFILE                  "RandomFile"
 
 /* If PRNG fails to seed, up this number in your nsd.tcl */
-#define CONFIG_SEEDBYTES            "SeedBytes"
-#define DEFAULT_SEEDBYTES           1024
+#define CONFIG_SEEDBYTES                   "SeedBytes"
+#define DEFAULT_SEEDBYTES                  1024
 
 char *ConfigStringDefault(char *module, char *path, char *name,
     char *def);
